Update project link in index.html

--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
                             <button id="applySettingsBtn" style="flex: 1; padding: 10px; font-size: 16px; border: none; border-radius: 8px; background: var(--primary_color); color: white; cursor: pointer;">确认</button>
                         </div>
                     </div>
-				<div class="projectList"><a class="projectItem a" target="_blank" href="https://ehsjzhbs-lwtw.4everland.app/">
+				<div class="projectList"><a class="projectItem a" target="_blank" href="https://ehsjzhbs-80my.4everland.app/">
 						<div class="projectItemLeft">
 							<h1>存档下载中心</h1>
 							<p>资源存档与下载服务</p>
