--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
                             <button id="applySettingsBtn" style="flex: 1; padding: 10px; font-size: 16px; border: none; border-radius: 8px; background: var(--primary_color); color: white; cursor: pointer;">确认</button>
                         </div>
                     </div>
-				<div class="projectList"><a class="projectItem a" target="_blank" href="https://1szz2zz.github.io/ehsjzhbs/">
+				<div class="projectList"><a class="projectItem a" target="_blank" href="https://astounding-alfajores-8f57dd.netlify.app/">
 						<div class="projectItemLeft">
 							<h1>存档下载中心</h1>
 							<p>资源存档与下载服务</p>
@@ -1069,7 +1069,7 @@
 							<img src="./static/img/i1.png" alt="">
 						</div>
 
-					</a><a class="projectItem a" target="_blank" href="https://1szz2zz.github.io/mkxnkl/">
+					</a><a class="projectItem a" target="_blank" href="https://regal-platypus-542def.netlify.app/">
 						<div class="projectItemLeft">
 							<h1>Mc启动器下载网站</h1>
 							<p>Minecraft启动器下载平台</p>
